fixed vh issue on mobile

--- a/client/src/components/AppContainer/AppContainer.module.scss
+++ b/client/src/components/AppContainer/AppContainer.module.scss
@@ -2,7 +2,7 @@
 
 .app {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-color: $scheme-navy-blue;
   display: flex;
   justify-content: center;
